; ModuleID = '/home/carl/AnghaBench/seafile/common/extr_rpc-service.c_seafile_calc_dir_size.c'
source_filename = "/home/carl/AnghaBench/seafile/common/extr_rpc-service.c_seafile_calc_dir_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SEAFILE_DOMAIN = common dso_local global i32 0, align 4
@SEAF_ERR_BAD_ARGS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"Argument should not be null\00", align 1
@.str.1 = private unnamed_addr constant [37 x i8] c"failed to calculate dir size for %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @seafile_calc_dir_size(i8* %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32** %1, i32*** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %15, label %10

10:                                               ; preds = %2
  %11 = load i32**, i32*** %5, align 8
  %12 = load i32, i32* @SEAFILE_DOMAIN, align 4
  %13 = load i32, i32* @SEAF_ERR_BAD_ARGS, align 4
  %14 = call i32 @g_set_error(i32** %11, i32 %12, i32 %13, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %3, align 4
  br label %28

15:                                               ; preds = %2
  %16 = load i8*, i8** %4, align 8
  %17 = load i32**, i32*** %5, align 8
  %18 = call i32 @ccnet_calc_directory_size(i8* %16, i32** %17)
  store i32 %18, i32* %6, align 4
  %19 = load i32, i32* %6, align 4
  %20 = icmp slt i32 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %15
  %22 = load i8*, i8** %4, align 8
  %23 = call i32 @seaf_warning(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.1, i64 0, i64 0), i8* %22)
  store i32 -1, i32* %3, align 4
  br label %28

24:                                               ; preds = %15
  %25 = load i32, i32* %6, align 4
  %26 = ashr i32 %25, 20
  store i32 %26, i32* %7, align 4
  %27 = load i32, i32* %7, align 4
  store i32 %27, i32* %3, align 4
  br label %28

28:                                               ; preds = %24, %21, %10
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i32 @g_set_error(i32**, i32, i32, i8*) #1

declare dso_local i32 @ccnet_calc_directory_size(i8*, i32**) #1

declare dso_local i32 @seaf_warning(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
